[package]
name = "codecontexter"
version = "0.1.3"
edition = "2024"
description = "A simple codebase serializer for LLM Context Windows."

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
indicatif = "0.18.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[package.metadata.deb]
maintainer = "Irving Ernesto <business@irvingernesto.com>"
copyright = "2025, Irving Ernesto"
license-file = ["LICENSE", "4"]
extended-description = """\
A fast CLI tool designed to aggregate codebase context for Large Language Models.
It respects .gitignore, visualizes directory trees, and redacts secrets automatically.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/codecontexter", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/codecontexter/README.md", "644"],
]